--- a/Prog2.html
+++ b/Prog2.html
@@ -7,9 +7,10 @@
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		<script src="src/Main.js"></script>
+		<script src="src/HomeCtrl.js"></script>
 	</head>
 	<body>
-		<div ng-controller="MainCtrl">
+		<div ng-controller="HomeCtrl">
 			{{userName}}
 		</div>
 	</body>
