Added some routing information

--- a/Prog2.html
+++ b/Prog2.html
@@ -10,8 +10,11 @@
 		<script src="src/HomeCtrl.js"></script>
 	</head>
 	<body>
+	<!--
 		<div ng-controller="HomeCtrl">
 			{{userName}}
 		</div>
+	-->
+		<div ng-view></div>
 	</body>
 </html>
