Added some error handling to user name selection

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 		<script src="src/HomeCtrl.js"></script>
 	</head>
 	<body>
-	<!--
-		<div ng-controller="HomeCtrl">
-			{{userName}}
-		</div>
-	-->
+		<!-- Main content will be loaded here-->
 		<div ng-view></div>
 	</body>
 </html>
