--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<script src="node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-		<script src="src/Main.js"></script>
-		<script src="src/LoginCtrl.js"></script>
+		
+		<script type="text/javascript" src="src/Main.js"></script>
+		<script type="text/javascript" src="src/LoginCtrl.js"></script>
+		<script type="text/javascript" src="src/HomeCtrl"></script>
 	</head>
 	<body>
 		<!-- Main content will be loaded here-->
