Added some routing, structure and made Home show all abailable chatrooms

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 		<script type="text/javascript" src="src/Main.js"></script>
 		<script type="text/javascript" src="src/LoginCtrl.js"></script>
-		<script type="text/javascript" src="src/HomeCtrl"></script>
+		<script type="text/javascript" src="src/HomeCtrl.js"></script>
 	</head>
 	<body>
 		<!-- Main content will be loaded here-->
