--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="src/Main.js"></script>
 		<script type="text/javascript" src="src/LoginCtrl.js"></script>
 		<script type="text/javascript" src="src/HomeCtrl.js"></script>
+		<script type="text/javascript" src="src/Globals.js"></script>
 	</head>
 	<body>
 		<!-- Main content will be loaded here-->
