--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		
-		<script type="text/javascript" src="src/Main.js"></script>
-		<script type="text/javascript" src="src/LoginCtrl.js"></script>
-		<script type="text/javascript" src="src/HomeCtrl.js"></script>
+		<script type="text/javascript" src="build/chatapp.min.js"></script>
 	</head>
 	<body>
 		<!-- Main content will be loaded here-->
