--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 		
+
+<!-- If using this one: -->
+		<script type="text/javascript" src="dest/ugly.min.js"></script>
+		
+<!-- Then comment these 4 out 
 		<script type="text/javascript" src="src/Main.js"></script>
 		<script type="text/javascript" src="src/LoginCtrl.js"></script>
 		<script type="text/javascript" src="src/HomeCtrl.js"></script>
 		<script type="text/javascript" src="src/Globals.js"></script>
+-->
+
 	</head>
 	<body>
 		<!-- Main content will be loaded here-->
