Fixed a bug in the dependency injection

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		
 
 <!-- If using this one: -->
-		<script type="text/javascript" src="dest/ugly.min.js"></script>
-		
-<!-- Then comment these 4 out 
+		<!--<script type="text/javascript" src="dest/ugly.min.js"></script>
+		-->
+<!-- Then comment these 4 out -->
 		<script type="text/javascript" src="src/Main.js"></script>
 		<script type="text/javascript" src="src/LoginCtrl.js"></script>
 		<script type="text/javascript" src="src/HomeCtrl.js"></script>
 		<script type="text/javascript" src="src/Globals.js"></script>
--->
+<!-- -->
 
 	</head>
 	<body>
