--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="ChatApp">
 	<head>
 		<title>Programming assignment 2</title>
+		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="Prog2.css"/>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.min.js"></script>
