Added a home link other stuff

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	</head>
 	<body>
+		<a href="http://127.0.0.1:8000">Home</a>
 		<!-- Main content will be loaded here-->
 		<div ng-view></div>
 	</body>
